# talk2ga

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  Makefile  README.md  eslint.config.js
backend/: .dockerignore  .envrc.template  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/docs/: Infra-practical-notes.md  Infra.md  Infrastructure.md
backend/migrations/: env.py
backend/migrations/versions/: 20240507_add_sql_queries_fields.py  2414ee75b615_initial_migration.py
backend/src/: appconfig.py  config.py  deleteme.py  regression.py  run_app.py  run_tests.py  vi
backend/src/llm/: db.py  evaluation.py  flags.py  formatting.py  knowledge_bases.py  llms.py  refine_question.py  test.py  validation.py  whole_chain.py
backend/src/llm/llm_chains/: correction_add_date_range.py  explain.py  format_output.py  generate_sql.py  generate_sql_correction.py  identify_ambiguities.py  reword_question.py  sql_chain.py
backend/src/llm/misc/: prompts-for-development.md
backend/src/llm/prompts/: correction_add_date_range.py  example_rows_fragment.py  explain.py  format_output.py  refinement_detect_ambiguities.py  refinement_reword_question_from_ambiguities.py  smart_answers.py  sql_correction.py  sql_generation.py
backend/src/llm/static/: schema-description.json  schema-description.sql  schema-description.txt
backend/src/llm/static/knowledge_base/: knowledge-base.txt  smart-answers-slugs.json
backend/src/llm/static/knowledge_base/sql_examples/: 90th_percentile_page_views_per_user.sql  TEMPLATE.sql  average_sessions_per_user.sql  average_top_10perc_pageview_per_user.sql  count_page_views.sql  count_sessions.sql  count_specific_page_views.sql  count_users_per_mobile_device.sql  device_identification_count_users.sql  how_many_visits.sql  median_page_views_per_session.sql  most_clicked_link.sql  proportion_mobile_events.sql  (+3 more)
backend/src/llm/tests/: non_smart_answers.txt  smart_answers.txt  test_smart_answers.py
backend/src/modules/: config.py  db.py  evaluation.py  knowledge_bases.py  llms.py  test.py
backend/src/modules/llm_chains/: format_output.py  generate_sql.py  sql_chain.py
backend/src/modules/prompts/: format_output.py  smart_answers.py
backend/src/static/: knowledge-base-smart-answers-slugs.json  knowledge-base.txt
backend/src/templates/sqladmin/: _macros.html  base.html  create.html  details.html  edit.html  error.html  index.html  layout.html  login.html
backend/src/templates/sqladmin/modals/: delete.html  details_action_confirmation.html  list_action_confirmation.html
backend/src/tests/: test_formatting.py  test_sanitisation.py  test_sql_validation.py
backend/src/utils/: side_effects.py
backend/src/webapp/: analytics_controller.py  app.py  config.py  db.py  exceptions.py  full_chain.py  models.py
backend/src/webapp/admin/: admin.py  admin_views.py
backend/src/webapp/static/: index.html
(+60 files in other folders)
