[tool.poetry]
name = "talk2ga"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.11.4"
jupyterlab = "^4.0.11"
langchain = "^0.1.4"
langchain-openai = "^0.0.5"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
google-cloud-bigquery = "^3.17.1"
sqlalchemy = "1.4.51"
sqlalchemy-bigquery = "^1.9.0"
tabulate = "^0.9.0"
langchain-community = "^0.0.16"
langchain-google-vertexai = "^0.0.3"
streamlit = "^1.30.0"
google-cloud-bigquery-storage = "^2.24.0"
langchain-experimental = "^0.0.49"
chromadb = "^0.4.22"
google-cloud-aiplatform = "^1.41.0"
wikipedia = "^1.4.0"
uvicorn = "^0.27.1"
sse-starlette = "^2.0.0"
langserve = "^0.0.51"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
