[tool.poetry]
name = "talk2ga"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.11.4"
langchain-openai = "^0.0.5"
python-dotenv = "^1.0.1"
google-cloud-bigquery = "^3.17.1"
tabulate = "^0.9.0"
langchain-google-vertexai = "^0.0.3"
google-cloud-bigquery-storage = "^2.24.0"
langchain-experimental = "^0.0.49"
google-cloud-aiplatform = "^1.41.0"
uvicorn = "^0.27.1"
sse-starlette = "^2.0.0"
langserve = "^0.0.51"
sqlmodel = "^0.0.16"
pytz = "^2024.1"
asyncpg = "^0.29.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.0"
fastapi = "^0.110.0"
loguru = "^0.7.2"
greenlet = "^3.0.3"
sql-metadata = "^2.10.0"
langchain = "^0.1.14"
alembic = "^1.13.1"
langfuse = "^2.25.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pretty-errors = "^1.2.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
